ncc/testsuite/positive/bug-1129.n
public class A {
  public f () : System.Collections.Generic.IEnumerable[int] {
    throw System.Exception ();
    yield 1;
  }
}
try {
  foreach (_ in A ().f ())
    System.Console.WriteLine ("WRONG");
} catch {
  | _ => System.Console.WriteLine ("OK")
}
/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
