ncc/testsuite/negative/try.n
class M {
  static f () : int {
    try {   // E: expected int.*, got string in catch body
      1
    } catch { _ : System.Exception =>
      "foo" }; 
  }
}

class E : System.Exception {
  public this() {}
}

class M1 {
  static g () : void { throw E () }        // OK
  static f () : void { throw 3 }        // E: expected System.Exception, got int in thrown value
}
